# tradfri_gateway

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT  README.md
examples/: light.rs
src/: color.rs  gateway.rs  lib.rs  serialization.rs
src/device/: light.rs  mod.rs  parse.rs  update.rs
src/group/: mod.rs  parse.rs  update.rs
src/tradfri_coap/: authenticator.rs  connection.rs  device_worker.rs  error.rs  macros.rs  mod.rs
src/tradfri_coap/device/: colournames.rs  light.rs  mod.rs  outlet.rs
src/udp_dtls/: certificate.rs  certificate_fingerprint.rs  dtls_acceptor.rs  dtls_acceptor_builder.rs  dtls_connection_builder.rs  dtls_connector.rs  dtls_stream.rs  error.rs  identity.rs  midhandshake_dtls_steam.rs  mod.rs  openssl.rs  protocol.rs
