[package]
name = "tradfri_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
coap = "0.8"
openssl = { version = "0.10.19", features = [ "vendored" ] }
openssl-probe = "0.1.2"
log = "0.4.6"
bytes = "0.4.11"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0.49"
chrono = "0.4.31"
mdns-sd = "0.9.3"

[features]
