[package]
name = "tradfri_gateway"
authors = ["Fredrik Söderström <tirithen@gmail.com>"]
description = "A rust crate for connecting to the Ikea TRÅDFRI gateway, and for controlling your home devices through the gateway."
homepage = "https://github.com/tirithen/tradfri_gateway"
repository = "https://github.com/tirithen/tradfri_gateway"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
keywords = ["ikea", "tradfri", "coap", "dtls", "homeautomation"]
categories = ["api-bindings", "network-programming"]

[dependencies]
coap = "0.8"
openssl = { version = "0.10.19", features = [ "vendored" ] }
openssl-probe = "0.1.2"
log = "0.4.6"
bytes = "0.4.11"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
thiserror = "1.0.49"
chrono = "0.4.31"
mdns-sd = "0.9.3"

[features]
